--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
 </head>
 
 <body>
-    <div>
-        <app-root></app-root>
+    <div app-root>
+        <!-- <app-root></app-root> -->
     </div>
 
     <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
